--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body class="home">
     <header>
-        <!-- 
+        <!--
 			***************
-				LOGO 
+				LOGO
 			***************
 		-->
         <h1 id="site-name">
@@ -25,9 +25,9 @@
         </h1>
 
         <nav>
-            <!-- 
+            <!--
         ***************
-          MENU 
+          MENU
         ***************
       -->
 
@@ -48,9 +48,9 @@
     </svg>
     <img src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\WebD.svg" alt="" />
 
-    <!-- 
+    <!--
     ***************
-       CONTENT 
+       CONTENT
     ***************
   -->
     <main>
@@ -74,7 +74,7 @@
 
             <ul>
                 <li>
-                    <img src="C:/Users/admin/Downloads/pen.svg" alt=""> <br>
+                    <img src=".../img/pen.svg" alt=""> <br>
                     <p>5+ years of experience in analysis and development of the software.</p>
                 </li>
                 <li>
@@ -154,9 +154,9 @@
 
     </main>
 
-    <!-- 
+    <!--
      ***************
-       CTA 
+       CTA
      ***************
   -->
     <div class="contact">
