--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="boxes">
             <div class="contact">
-                <img id="Experience" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\Mask.svg" alt="">
+                <img id="Experience" src=".../img/Mask.svg" alt="">
                 <h3 id="textcont">Experience</h3>
                 <p id="pcont">Provide creative solutions in diversified fields of business.</p>
             </div>
@@ -78,15 +78,15 @@
                     <p>5+ years of experience in analysis and development of the software.</p>
                 </li>
                 <li>
-                    <img src="C:/Users/admin/Downloads/Group%20133.svg" alt=""> <br>
+                    <img src=".../img/Group%20133.svg" alt=""> <br>
                     <p>I like new challenges to build a massive mobile Application Development.</p>
                 </li>
                 <li>
-                    <img src="C:/Users/admin/Downloads/worldwideweb.svg" alt=""> <br>
+                    <img src=".../img/worldwideweb.svg" alt=""> <br>
                     <p>With ability to dream with you to build dynamic business solutions.</p>
                 </li>
                 <li>
-                    <img src="C:/Users/admin/Downloads/color.svg" alt=""> <br>
+                    <img src=".../img/color.svg" alt=""> <br>
                     <p>I’ll assemble a team with project management skills for your business.</p>
                 </li>
             </ul>
@@ -102,7 +102,7 @@
 
         <div class="grid">
             <div class="contact">
-                <img id="ProjectsImg" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\Mask.svg" alt="">
+                <img id="ProjectsImg" src=".../img/Mask.svg" alt="">
                 <h4 id="textcont">Projects</h4>
                 <p id="pcont">Reach out to the world’s most reliable services.</p>
             </div>
@@ -160,7 +160,7 @@
      ***************
   -->
     <div class="contact">
-        <img class="Contactimg" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\Mask.svg" alt="">
+        <img class="Contactimg" src=".../img/Mask.svg" alt="">
         <h5 id="textcont">Contact me</h5>
         <p id="pcont">Reach out to the world’s most reliable services.</p>
     </div>
@@ -172,7 +172,7 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div id="lableA" class="row">
                     <div class="col-sm-2">
-                        <img class="Image" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\Phone.svg"
+                        <img class="Image" src="/img/Phone.svg"
                             alt="">
                     </div>
                     <div class="col-sm-4">
@@ -181,7 +181,7 @@
                 </div>
                 <div id="lableA" class="row mt-5">
                     <div class="col-sm-2">
-                        <img class="Image" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\Email.svg"
+                        <img class="Image" src=".../img/Email.svg"
                             alt="">
                     </div>
                     <div class="col-sm-4">
@@ -190,7 +190,7 @@
                 </div>
                 <div id="lableA" class="row mt-5">
                     <div class="col-sm-2">
-                        <img class="Image" src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\folllowme.svg"
+                        <img class="Image" src=".../img/folllowme.svg"
                             alt="">
                     </div>
                     <div class="col-sm-4">
@@ -198,12 +198,12 @@
                         <div class="row">
                             <div class="col-md">
                                 <a href="https://codepen.io/ahmadam31"><img id="socialMedia"
-                                        src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\codepen.svg"
+                                        src=".../img/codepen.svg"
                                         alt=""></a>
                             </div>
                             <div class="col-md">
                                 <a href="https://github.com/ahmadam37"><img id="socialMedia"
-                                        src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\github.svg"
+                                        src=".../img/github.svg"
                                         alt=""></a>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                     <div class="row">
                         <div class="col-sm-2 col-md-2 col-lg-2">
                             <img id="ImageFotterCard"
-                                src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\AhmadL.png" alt="">
+                                src=".../img/AhmadL.png" alt="">
                         </div>
                         <div class="col-md-10">
                             <div class="row">
@@ -260,7 +260,7 @@
             <!-- Copyright -->
             <div id="Copyright" class="text-center text-dark p-3">
                 <div class="ImgFotter">
-                    <img src="C:\Users\admin\Desktop\Development\Projects\AhmadWeb\img\FooterImg.svg" alt="">
+                    <img src=".../img/FooterImg.svg" alt="">
                 </div>
                 <a id="CopyrightText" class="text-light" href="https://jdeel.sa/">
                     <h6>Powerd by</h6> &nbsp; jdeel.sa
